--- a/projeto_angular/login-page/src/app/components/default-login-layout/default-login-layout.html
+++ b/projeto_angular/login-page/src/app/components/default-login-layout/default-login-layout.html
@@ -1,16 +1,22 @@
 <main>
-    <section>
+    <section class="form-section">
         <img src="/logo.svg"/>
-        <h2></h2>
-        <button></button>
-        <div>
+        <h2> {{ title }}</h2>
+        <ng-content></ng-content>
+        <div class="btn-wrapper">
+            <button class="btn-primary">{{ primaryBtnText }}</button>
+        <div class="divider">
+            <div></div>
             <span>or</span>
+            <div></div>
         </div>
-        <button></button>
+        <button class="btn-secondary">{{ secondaryBtnText }}</button>
+        </div>
+        
     </section>
 
 
-    <section>
+    <section class="main-section">
         <h1>You Should, MoveIt!</h1>
         <img src="/main-ilustration.svg"/>
     </section>
