--- a/projeto_angular/login-page/src/app/pages/login/login.html
+++ b/projeto_angular/login-page/src/app/pages/login/login.html
@@ -1,8 +1,28 @@
 <app-default-login-layout title="Login into your account"
     primaryBtnText="Login Now"
-    secondaryBtnText="Signup Now">
+    secondaryBtnText="Signup Now"
+    (submit)="submit()"
+    (navigate)="navigate()"
+    >
+
     <form [formGroup]="loginForm">
-        
+        <app-primary-input
+        formControlName="email"
+        inputName="email"
+        type="email"
+        label="Email"
+        placeholder="johndo@gmail.com">
+        <!-- <img src="teste2.svg"/> -->
+        </app-primary-input>
+
+        <app-primary-input
+        formControlName="password"
+        inputName="password"
+        type="password"
+        label="Your Password">
+        <!-- <img src="password-icon.svg"/> -->
+        </app-primary-input>
+        <span>Forgot Password?</span>
     </form>
 
 </app-default-login-layout>
